fixed header & collapses css

--- a/src/style/components/banner.scss
+++ b/src/style/components/banner.scss
@@ -42,12 +42,11 @@
   }
 }
 
-
 @media screen and (max-width: 768px) {
   .banner {
     height: 111px;
 
-    &__text {
+    .banner__text {
       @include h1_mixin(white, 'mobile');
       justify-content: flex-start;
       padding-left: 15px;
