--- a/src/style/components/locations__list.scss
+++ b/src/style/components/locations__list.scss
@@ -9,7 +9,8 @@
   flex-wrap: wrap;
   justify-content: space-evenly;
   gap: 50px;
-  margin-top: 45px;
+  margin-top: 50px;
+  margin-bottom: 50px;
 
   padding: 50px;
   border-radius: 25px;
