--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,4 +1,3 @@
-
 @import 'variables';
 @import 'mixins';
 
@@ -14,34 +13,27 @@
 @import 'pages/erreur.scss';
 @import 'pages/about.scss';
 
-#main{
-    // min-height: 100vh;
-    height: min-content;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    margin: $main_margin--desktop;
-    // overflow: hidden;
-    @media screen and (max-width:768px) {
-            margin: $main_margin--mobile;
-            height:100% ;
-        
-    }
+#main {
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  margin: $main_margin--desktop;
+  @media screen and (max-width: 768px) {
+    margin: $main_margin--mobile;
+  }
 }
 .app-container {
-    display: flex;
-    flex-direction: column;
-    // min-height: 100vh;
-    // min-width: 100vh;
-}
-#root{
-    display: flex;
-    flex-direction: column;
-}
-*{
- margin: 0px ;
- padding: 0px;  
-}
+  display: flex;
+  flex-direction: column;
 
+}
+#root {
+  display: flex;
+  flex-direction: column;
+}
+* {
+  margin: 0px;
+  padding: 0px;
+}
